# ProjectSniffer

./: .gitignore
src/app/BoardCore/: CMakeLists.txt
src/app/BoardCore/Application/: main.cpp
src/app/BoardCore/Application/includes/: main.hpp
src/app/BoardCore/Core/IoC/: StartupContainer.cpp
src/app/BoardCore/Core/IoC/includes/: CMakeLists.txt  CoreModule.hpp  IComponent.hpp
src/app/BoardCore/Hardware/API/: API_temp.cpp
src/app/BoardCore/Hardware/UART/: uart_temp.cpp
src/app/Board_F743/Application/: CMakeLists.txt  main.cpp
src/app/Board_F743/Core/: CMakeLists.txt
src/app/Board_F743/Core/IoC/: CoreModule.cpp  IOCContainer.cpp
src/app/Board_F743/Core/IoC/includes/: IFactory.hpp  IModule.hpp  IOCContainer.hpp  StartupContainer.hpp
src/app/Board_F743/Hardware/API/includes/: API_temp.hpp
